--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,11 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li style="font-size:24px;color:black"><a href="/">Home</a></li>
-		        	<li style="font-size:24px;color:black"><a href="/program">Program</a></li>
-	        		<li style="font-size:24px;color:black"><a href="/speakers">Speakers</a></li>
-	        		<li style="font-size:24px;color:black"><a href="/aboutus">Organizers</a></li>
-				<li style="font-size:24px;color:black"><a href="/join">How to join</a></li>
+	        		<li style="font-size:24px;color:blue"><a href="/ocns2020interneurons/">Home</a></li>
+		        	<li style="font-size:24px;color:blue"><a href="/ocns2020interneurons/program">Program</a></li>
+	        		<li style="font-size:24px;color:blue"><a href="/ocns2020interneurons/speakers">Speakers</a></li>
+	        		<li style="font-size:24px;color:blue"><a href="/ocns2020interneurons/aboutus">Organizers</a></li>
+				<li style="font-size:24px;color:blue"><a href="/ocns2020interneurons/join">How to join</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
