--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li style="font-size:24px;color:black"><a href="/ocns2020interneurons/">Home</a></li>
+	        		<li style="font-size:24px;color:black"><a href="/ocns2020interneurons">Home</a></li>
 		        	<li style="font-size:24px;color:black"><a href="/ocns2020interneurons/program">Program</a></li>
 	        		<li style="font-size:24px;color:black"><a href="/ocns2020interneurons/speakers">Speakers</a></li>
 	        		<li style="font-size:24px;color:black"><a href="/ocns2020interneurons/aboutus">Organizers</a></li>
