--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 		        	<li style="font-size:24px;color:black"><a href="/ocns2020interneurons/program">Program</a></li>
 	        		<li style="font-size:24px;color:black"><a href="/ocns2020interneurons/speakers">Speakers</a></li>
 	        		<li style="font-size:24px;color:black"><a href="/ocns2020interneurons/aboutus">Organizers</a></li>
-				<li style="font-size:24px;color:black"><a href="/ocns2020interneurons/join">How to join</a></li>
+				<li style="font-size:24px;color:black"><a href="/ocns2020interneurons/join">Watch online</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
